# inkan

./: .git-kit.yml  .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: alpha-release.yml  cargo-publish.yml  commit.yml  release.yml
Formula/: gitkit-bin.rb  inkan.rb
migrations/: Cargo.toml
migrations/src/: lib.rs
scripts/: install.sh
src/: actions.rs  app_config.rs  app_context.rs  app_template.rs  args.rs  branch.rs  cli.rs  config.rs  context.rs  entry.rs  git_commands.rs  lib.rs  main.rs  migrations.rs  template.rs  template_config.rs
src/adapters/: git.rs  mod.rs  prompt.rs  sqlite.rs
src/adapters/git/: git_adapter.rs  mod.rs  system_adapter.rs
src/adapters/store/: mappings.rs  migrations.rs  mod.rs  sqlite.rs
src/cli/: commands.rs  error.rs  mod.rs
src/cli/checkout/: args.rs  handler.rs  mod.rs
src/cli/commit/: args.rs  handler.rs  mod.rs  templates.rs
src/cli/config/: args.rs  handler.rs
src/cli/context/: args.rs  handler.rs  mod.rs
src/cli/log/: level.rs  mod.rs
src/cli/template/: commands.rs  handler.rs  mod.rs
src/cli/templates/: handler.rs  mod.rs
src/domain/: commands.rs  errors.rs  mod.rs  store.rs  template.rs
src/domain/adapters/: git.rs  mod.rs  prompt.rs  store.rs
src/domain/commands/: actions.rs  actor.rs  checkout.rs  context.rs  mod.rs
src/domain/commands/commit/: args.rs  handler.rs  mod.rs
src/domain/models/: branch.rs  config.rs  config_key.rs  config_status.rs  mod.rs  path.rs  template.rs
src/utils/: file.rs  merge.rs  mod.rs  or_else_try.rs  string.rs  try_convert.rs
templates/: conventional.yml  default.yml
templates/commit/: break.md  bug.md  deps.md  docs.md  feature.md  refactor.md  test.md
tests/: checkout_test.rs  commit_test.rs  context_test.rs  fakers.rs
