[package]
name = "git-kit"
version = "0.0.10"
edition = "2021"
authors = ["Thomas Pearson thomaspearson.dev@gmail.com"]
license = "MIT"
description = "git cli containing templates & utilities."
readme = "README.md"
homepage = "https://github.com/xsv24/git-kit"
repository = "https://github.com/xsv24/git-kit"
keywords = ["cli", "git", "templates"]
categories = ["command-line-utilities"]

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2"
clap = { version = "3.2.17", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.3" 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4.22" }
directories = { version = "4.0.1" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = { version = "1.1.2", features = [ "v4" ] }

[dev-dependencies]
fake = { version = "2.5.0" }

[build-dependencies]
directories = { version = "4.0.1" }